# ROS-lab

./: .gitignore  README.md
ROS1/catkin_rl_ws/src/autonomous_vehicle_simulator/: README.md
ROS1/catkin_rl_ws/src/autonomous_vehicle_simulator/autonomous_driving_track_world/worlds/: road_track.world
ROS1/catkin_rl_ws/src/autonomous_vehicle_simulator/autonomous_vehicle_with_rl/: CMakeLists.txt  package.xml  requirements.txt
ROS1/catkin_ws/.catkin_tools/profiles/default/: devel_collisions.txt
ROS1/catkin_ws/logs/auto_vehicle/: build.cmake.000.log.stderr
ROS1/catkin_ws/src/ackermann_vehicle/ackermann_vehicle_description/: CMakeLists.txt
ROS1/catkin_ws/src/autonomous_vehicle_simulator/: README.md
ROS1/catkin_ws/src/autonomous_vehicle_simulator/auto_vehicle/: CMakeLists.txt  package.xml
ROS1/catkin_ws/src/autonomous_vehicle_simulator/auto_vehicle/include/: RoadDetector.h  RoadDetector.hpp  vehicle_control.h  vehicle_control.hpp
ROS1/catkin_ws/src/autonomous_vehicle_simulator/auto_vehicle/src/: RoadDetector.cc  RoadDetector.cpp  automate_vehicle.cc  automate_vehicle.cpp
ROS1/catkin_ws/src/autonomous_vehicle_simulator/auto_vehicle_analyzer/: CMakeLists.txt  package.xml  requirements.txt
ROS1/catkin_ws/src/autonomous_vehicle_simulator/auto_vehicle_msgs/: CMakeLists.txt
ROS1/catkin_ws/src/autonomous_vehicle_simulator/autonomous_driving_track_world/: CMakeLists.txt
ROS1/catkin_ws/src/autonomous_vehicle_simulator/autonomous_vehicle/: CMakeLists.txt  package.xml
ROS1/catkin_ws/src/gazebo_model_push/: CMakeLists.txt  README.md  package.xml
ROS1/catkin_ws/src/gazebo_model_push/worlds/: model_push.world
ROS1/catkin_ws/src/gazebo_plugin_tutorial/: CMakeLists.txt  README.md
ROS1/catkin_ws/src/gazebo_plugin_tutorial/src/: hello_world.cc
ROS1/catkin_ws/src/gazebo_plugin_tutorial/worlds/: hello.world
ROS1/catkin_ws/src/gazebo_ros_pkgs/: .project
ROS1/catkin_ws/src/gazebo_ros_pkgs/gazebo_plugins/: CMakeLists.txt
ROS1/catkin_ws/src/gazebo_vechile_contorl/: CMakeLists.txt  README.md  package.xml
ROS1/catkin_ws/src/gazebo_vechile_contorl/worlds/: vehicle_control.world
ROS1/catkin_ws/src/gazebo_vehicle_contorl/: CMakeLists.txt  README.md  run_gazebo_vehicle_control.sh
ROS1/catkin_ws/src/gazebo_vehicle_contorl/launch/: gazebo_vehicle_control.launch
ROS1/catkin_ws/src/gazebo_vehicle_contorl/worlds/: vehicle_control.world
ROS1/catkin_ws/src/lane_follower_sim/: README.md
ROS1/catkin_ws/src/lane_follower_sim/auto_drive/: .clangd  CMakeLists.txt  package.xml
ROS1/catkin_ws/src/lane_follower_sim/auto_drive/src/: automate_vehicle.cc
ROS1/catkin_ws/src/lane_follower_sim/driving_track/: CMakeLists.txt  package.xml
ROS1/catkin_ws/src/lane_follower_sim/vehicle_gazebo/: CMakeLists.txt
ROS1/catkin_ws/src/lidar/: Readme.md
ROS1/catkin_ws/src/lidar/lidar_tutorial/: CMakeLists.txt  package.xml
ROS1/catkin_ws/src/lidar/lidar_tutorial/include/lidar_tutorial/: lidar_visualizer.h
ROS1/catkin_ws/src/lidar/lidar_tutorial/include/velodyne_gazebo_plugins/: GazeboRosVelodyneLaser.h
ROS1/catkin_ws/src/lidar/lidar_tutorial/launch/: start_lidar.launch  velodyne_lidar.launch
ROS1/catkin_ws/src/lidar/lidar_tutorial/src/: GazeboRosVelodyneLaser.cpp  lidar_visualizer.cc
ROS1/catkin_ws/src/lidar/lidar_tutorial/velodyne_description/rviz/: example.rviz
ROS1/catkin_ws/src/lidar/lidar_tutorial/velodyne_description/urdf/: HDL-32E.urdf.xacro  VLP-16.urdf.xacro  example.urdf.xacro
ROS1/catkin_ws/src/lidar/lidar_tutorial/world/: lidar_u.world  single_beam_lidar.world
ROS1/catkin_ws/src/lidar/patchwork/: CMakeLists.txt
ROS1/catkin_ws/src/vehicle_data_visualization/: CMakeLists.txt  README.md  package.xml
ROS1/catkin_ws/src/vehicle_data_visualization/msg/: Vehicle.msg
ROS1/catkin_ws/src/vehicle_data_visualization/src/: plot.cc
ROS1/catkin_ws/src/vehicle_simulator/cv_bridge/: CMakeLists.txt  package.xml
ROS1/catkin_ws/src/vehicle_simulator/cv_bridge/src/: cv_bridge.cc
ROS1/catkin_ws/src/vehicle_simulator/object_avoidance/: CMakeLists.txt  Readme.md  package.xml
ROS1/catkin_ws/src/vehicle_simulator/object_avoidance/include/object_avoidance/: object_avoidance.h  object_detection.h
ROS1/catkin_ws/src/vehicle_simulator/object_avoidance/launch/: gazebo_vehicle.launch  object_detecton_gazebo.launch
ROS1/catkin_ws/src/vehicle_simulator/object_avoidance/scripts/: object_avoiding.py  object_detection.py
ROS1/catkin_ws/src/vehicle_simulator/object_avoidance/src/: image_converter.cc  object_avoidance.cc  object_detection.cc
ROS1/catkin_ws/src/vehicle_simulator/vehicles/: CMakeLists.txt  package.xml
ROS1/catkin_ws/src/vehicle_simulator/vehicles/launch/: display_vehicle.launch
ROS1/catkin_ws/src/vehicle_simulator/vehicles/models/: camera.gazebo  camera.xacro
ROS1/catkin_ws/src/vehicle_simulator/vehicles/worlds/: vehicle_control.world
ROS1/catkin_ws/src/vehicle_simulator/video_stream/: CMakeLists.txt  package.xml
ROS1/catkin_ws/src/vehicle_simulator/video_stream/include/video_stream/: video_stream.h
ROS1/catkin_ws/src/vehicle_simulator/video_stream/scripts/: video_stream.py  webcam_stream.py
ROS1/catkin_ws/src/vehicle_simulator/video_stream/src/: webcam_stream.cc
ROS2/: README.md  install_ros2.sh  object_avoidance_run_script.sh  run_script.sh  teleop_keyboard.py  venv_script.sh
ROS2/gazebo-ros-plugins/: CMakeLists.txt
ROS2/gazebo-ros-plugins/src/: gazebo_ros_diff_drive.cpp  gazebo_ros_diff_drive_2.cpp
ROS2/publishers/: teleop_keyboard.py
ROS2/subscribers/object-detection/: autonomous_object_avoiding.py  object_detection.py  requirements.txt  util.py
ROS2/velodyne_sensor/velodyne_driver/: CMakeLists.txt
ROS2/world/: cam_test.world  gazebo_ros_diff_drive_demo.world  gazebo_ros_diff_drive_demo_backup.world  gazebo_ros_diff_drive_demo_camera.world
pub-sub/: readme.md
pub-sub/devel/: .catkin  setup.sh
pub-sub/devel/lib/beginner_tutorials/: listener.py
pub-sub/devel/lib/pkgconfig/: beginner_tutorials.pc
pub-sub/devel/share/beginner_tutorials/cmake/: beginner_tutorialsConfig.cmake
pub-sub/src/beginner_tutorials/: CMakeLists.txt
(+45 files in other folders)
